add proto comments

--- a/notebook/parser_debug.ipynb
+++ b/notebook/parser_debug.ipynb
@@ -54,8 +54,17 @@
    },
    "outputs": [],
    "source": [
-    "print games[4]"
+    "print games[4].one_round[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
