--- a/notebook/transformer_model.ipynb
+++ b/notebook/transformer_model.ipynb
@@ -2,30 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
     "import sys\n",
-    "sys.path.insert(0, \"/Users/xinran.he/GitProjects/mahjong\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import requests\n",
+    "sys.path.insert(0, \"/Users/xinran.he/GitProjects/mahjong\")\n",
     "\n",
-    "temp = requests.get('https://tenhou.net/3/mjlog2xml.cgi?2019031303gm-00e1-0000-6be36403', headers={'host': 'tenhou.net', \n",
-    "    'referer': 'http://tenhou.net/3/?log=2019031303gm-00e1-0000-6be36403',\n",
-    "    'user-agent': 'Mozilla/5.0 (Linux; Android 6.0; Nexus 5 Build/MRA58N) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Mobile Safari/537.36'})\n",
-    "print temp.text"
+    "from trainer.params import PARAMETERS\n",
+    "from trainer.dataset import input_function\n",
+    "from trainer.transformer import Transformer\n",
+    "from trainer.model import model_fn"
    ]
   },
   {
@@ -36,30 +37,31 @@
    },
    "outputs": [],
    "source": [
-    "from log_parser.discard_prediction_parser import parse_discard_prediction"
+    "TRAINING_DATA_PATTERN = \"/Users/xinran.he/GitProjects/mahjong/data/tfrecord/20180101.gz\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "games = parse_discard_prediction(temp.text)"
+    "tf.reset_default_graph()\n",
+    "with tf.Session() as sess:\n",
+    "    features, labels = input_function([TRAINING_DATA_PATTERN], True, PARAMETERS)()\n",
+    "    transformer_model = Transformer(True, PARAMETERS)\n",
+    "    logits = transformer_model(features)\n",
+    "    sess.run(tf.initializers.global_variables())\n",
+    "    l = sess.run(logits)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print games[4].one_round[0]"
+    "print l.shape"
    ]
   },
   {
