model and data v2

--- a/notebook/tfrecord_dataset.ipynb
+++ b/notebook/tfrecord_dataset.ipynb
@@ -3,6 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+    "    return false;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -14,19 +26,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "sys.path.insert(0, \"/Users/xinran.he/GitProjects/mahjong\")\n",
     "\n",
-    "from model.embedding_layer import EmbeddingSharedWeights\n",
-    "from model.input_ops import get_feature_seq_embedding\n",
-    "from model.dataset import input_function\n",
-    "from model.params import PARAMETERS"
+    "from trainer.embedding_layer import EmbeddingSharedWeights\n",
+    "from trainer.input_ops import get_feature_seq_bias\n",
+    "from trainer.dataset import input_function\n",
+    "from trainer.params import test"
    ]
   },
   {
@@ -37,7 +47,8 @@
    },
    "outputs": [],
    "source": [
-    "TRAINING_DATA_PATTERN = \"/Users/xinran.he/GitProjects/mahjong/data/tfrecord/20180101.gz\""
+    "TRAINING_DATA_PATTERN = \"/Users/xinran.he/GitProjects/mahjong/data/tfrecord_v1/20180101.gz\"\n",
+    "PARAMETERS = test.PARAMETERS"
    ]
   },
   {
@@ -48,18 +59,31 @@
    "source": [
     "tf.reset_default_graph()\n",
     "with tf.Session() as sess:\n",
-    "    features, labels = input_function([TRAINING_DATA_PATTERN], True, PARAMETERS)()\n",
+    "    dataset = input_function([TRAINING_DATA_PATTERN], True, PARAMETERS)()\n",
+    "    iterator = dataset.make_one_shot_iterator()\n",
+    "    features, labels = iterator.get_next()\n",
+    "    #pos_emb_layer = EmbeddingSharedWeights(\"pos_emb\", 40, 32)\n",
+    "    #hai_emb_layer = EmbeddingSharedWeights(\"pos_emb\", 71, 32)\n",
+    "    #feature_emb = get_feature_seq_embedding(features)\n",
+    "    #pos_emb = pos_emb_layer(tf.sparse.to_dense(features[\"pos_seq\"]))\n",
+    "    #hai_emb = hai_emb_layer(tf.sparse.to_dense(features[\"hai_seq\"]))\n",
     "    \n",
-    "    pos_emb_layer = EmbeddingSharedWeights(\"pos_emb\", 40, 32)\n",
-    "    hai_emb_layer = EmbeddingSharedWeights(\"pos_emb\", 71, 32)\n",
-    "    feature_emb = get_feature_seq_embedding(features)\n",
-    "    pos_emb = pos_emb_layer(tf.sparse.to_dense(features[\"pos_seq\"]))\n",
-    "    hai_emb = hai_emb_layer(tf.sparse.to_dense(features[\"hai_seq\"]))\n",
-    "\n",
+    "    seq_features = get_feature_seq_bias(features, PARAMETERS)\n",
+    "    print seq_features.shape\n",
     "    sess.run(tf.initializers.global_variables())\n",
-    "    results = sess.run([tf.sparse.to_dense(features[\"hai_seq\"]), feature_emb, pos_emb, hai_emb])\n",
+    "    results = sess.run([features, labels, seq_features])\n",
+    "    #results = sess.run([tf.sparse.to_dense(features[\"hai_seq\"]), feature_emb, pos_emb, hai_emb])\n",
     "    #f, l = sess.run([features, labels])\n",
     "    #c_emb = sess.run(context_embedding_mtx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print results[2].shape"
    ]
   },
   {
@@ -252,7 +276,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hais = results[3]\n",
