--- a/notebook/transformer_model.ipynb
+++ b/notebook/transformer_model.ipynb
@@ -14,16 +14,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "sys.path.insert(0, \"/Users/xinran.he/GitProjects/mahjong\")\n",
     "\n",
-    "from trainer.params import PARAMETERS\n",
+    "from trainer.params import test\n",
     "from trainer.dataset import input_function\n",
     "from trainer.transformer import Transformer\n",
     "from trainer.model import model_fn"
@@ -31,37 +29,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "TRAINING_DATA_PATTERN = \"/Users/xinran.he/GitProjects/mahjong/data/tfrecord/20180101.gz\""
+    "TRAINING_DATA_PATTERN = \"/Users/xinran.he/GitProjects/mahjong/data/tfrecord_v1/20180101.gz\"\n",
+    "PARAMETERS = test.PARAMETERS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "WARNING: The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
+      "For more information, please see:\n",
+      "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
+      "  * https://github.com/tensorflow/addons\n",
+      "If you depend on functionality not listed there, please file an issue.\n",
+      "\n",
+      "WARNING:tensorflow:From /Users/xinran.he/GitProjects/mahjong/trainer/dataset.py:49: parallel_interleave (from tensorflow.contrib.data.python.ops.interleave_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.data.experimental.parallel_interleave(...)`.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
+      "WARNING:tensorflow:From /Users/xinran.he/GitProjects/mahjong/trainer/embedding_layer.py:40: to_float (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n",
+      "WARNING:tensorflow:From /Users/xinran.he/GitProjects/mahjong/trainer/transformer.py:30: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/feature_column/feature_column.py:205: _get_dense_tensor (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed after 2018-11-30.\n",
+      "Instructions for updating:\n",
+      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/feature_column/feature_column.py:2121: _transform_feature (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed after 2018-11-30.\n",
+      "Instructions for updating:\n",
+      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/feature_column/feature_column_v2.py:4295: _get_sparse_tensors (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed after 2018-11-30.\n",
+      "Instructions for updating:\n",
+      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/feature_column/feature_column.py:2121: _transform_feature (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed after 2018-11-30.\n",
+      "Instructions for updating:\n",
+      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/feature_column/feature_column_v2.py:3828: to_int64 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/feature_column/feature_column_v2.py:4266: _variable_shape (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed after 2018-11-30.\n",
+      "Instructions for updating:\n",
+      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/feature_column/feature_column_v2.py:4321: _num_buckets (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed after 2018-11-30.\n",
+      "Instructions for updating:\n",
+      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/feature_column/feature_column.py:205: _get_dense_tensor (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed after 2018-11-30.\n",
+      "Instructions for updating:\n",
+      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/feature_column/feature_column.py:2121: _transform_feature (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed after 2018-11-30.\n",
+      "Instructions for updating:\n",
+      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/feature_column/feature_column.py:206: _variable_shape (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed after 2018-11-30.\n",
+      "Instructions for updating:\n",
+      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/feature_column/feature_column_v2.py:4295: _get_sparse_tensors (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed after 2018-11-30.\n",
+      "Instructions for updating:\n",
+      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/feature_column/feature_column.py:2121: _transform_feature (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed after 2018-11-30.\n",
+      "Instructions for updating:\n",
+      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
+      "WARNING:tensorflow:From /usr/local/Cellar/python/2.7.13/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/tensorflow/python/feature_column/feature_column_v2.py:4321: _num_buckets (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed after 2018-11-30.\n",
+      "Instructions for updating:\n",
+      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
+      "WARNING:tensorflow:From /Users/xinran.he/GitProjects/mahjong/trainer/input_ops.py:53: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use keras.layers.dense instead.\n",
+      "WARNING:tensorflow:From /Users/xinran.he/GitProjects/mahjong/trainer/ffn_layer.py:66: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n"
+     ]
+    }
+   ],
    "source": [
     "tf.reset_default_graph()\n",
     "with tf.Session() as sess:\n",
-    "    features, labels = input_function([TRAINING_DATA_PATTERN], True, PARAMETERS)()\n",
+    "    dataset = input_function([TRAINING_DATA_PATTERN], True, PARAMETERS)()\n",
+    "    iterator = dataset.make_one_shot_iterator()\n",
+    "    features, labels = iterator.get_next()\n",
+    "    \n",
     "    transformer_model = Transformer(True, PARAMETERS)\n",
-    "    logits = transformer_model(features)\n",
+    "    discard_logits, riichi_logits  = transformer_model(features)\n",
     "    sess.run(tf.initializers.global_variables())\n",
-    "    l = sess.run(logits)"
+    "    ll = sess.run([discard_logits, riichi_logits])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[ 0.79935586, -1.796829  , -1.778116  , -1.2051383 , -3.9723203 ,\n",
+      "        -1.7145829 , -2.4144557 ,  0.7676431 ,  0.02309826, -0.28426033,\n",
+      "        -2.5009181 , -0.8309058 , -0.894861  , -2.4412706 ],\n",
+      "       [ 1.9142387 , -1.6830337 , -1.9553545 , -0.4760322 , -1.0587965 ,\n",
+      "        -1.5085065 , -1.7543552 , -2.92866   , -0.13239485, -0.6714107 ,\n",
+      "        -0.9709105 , -0.9255557 , -1.6241825 , -2.0905275 ]],\n",
+      "      dtype=float32), array([0.5234585 , 0.29916587], dtype=float32)]\n"
+     ]
+    }
+   ],
    "source": [
-    "print l.shape"
+    "print ll"
    ]
   },
   {
