fix hai embedding bug

--- a/notebook/Inference.ipynb
+++ b/notebook/Inference.ipynb
@@ -87,15 +87,19 @@
     "    meta_graph_def = tf.saved_model.loader.load(\n",
     "        sess,\n",
     "        [tf.saved_model.tag_constants.SERVING],\n",
-    "        '/Users/xinran.he/GitProjects/mahjong/training/1553103099')\n",
+    "        '/Users/xinran.he/GitProjects/mahjong/training/v2_1553184126')\n",
     "    graph = tf.get_default_graph()\n",
     "    input_tensor = graph.get_tensor_by_name(\"input:0\")\n",
     "    logits = graph.get_tensor_by_name(\"model/Transformer/Squeeze:0\")\n",
+    "    is_riichi = set()\n",
     "    for one_round in games[2].one_round:\n",
-    "        input_tfrecord = generate_tfexample(one_round).SerializeToString()\n",
+    "        center_player = one_round.center_player\n",
+    "        input_tfrecord = generate_tfexample(one_round, len(is_riichi)>0).SerializeToString()\n",
     "        pred = sess.run(logits, feed_dict={input_tensor: [input_tfrecord]})\n",
     "        print_one_round(one_round)\n",
-    "        print one_round.center_player.hand[np.argmax(pred)].char"
+    "        print one_round.center_player.hand[np.argmax(pred)].char\n",
+    "        if center_player.is_riichi:\n",
+    "            is_riichi.add(center_player.context.field)"
    ]
   },
   {
