--- a/single_efficiency/Train.ipynb
+++ b/single_efficiency/Train.ipynb
@@ -20,9 +20,12 @@
    },
    "outputs": [],
    "source": [
+    "from mahjong.shanten import Shanten\n",
     "import numpy as np\n",
     "import random\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "\n",
+    "SHANTEN = Shanten()"
    ]
   },
   {
@@ -33,8 +36,8 @@
    },
    "outputs": [],
    "source": [
-    "from single_efficiency.transformer import Transformer\n",
-    "from single_efficiency import utils, game_play, base_strategy"
+    "from single_efficiency.model import Model\n",
+    "from single_efficiency import utils"
    ]
   },
   {
@@ -53,6 +56,9 @@
     "    \"num_heads\": 2,\n",
     "    \"filter_size\": 16,\n",
     "    \n",
+    "    # reward\n",
+    "    \"gamma\": 0.9,\n",
+    "    \n",
     "    # Dropout values (only used when training)\n",
     "    \"layer_postprocess_dropout\": 0.1,\n",
     "    \"attention_dropout\": 0.1,\n",
@@ -62,8 +68,8 @@
     "    \"allow_ffn_pad\": True,\n",
     "    \n",
     "    # training\n",
+    "    \"batch_size\": 128,\n",
     "    \"learning_rate\": 0.001,\n",
-    "    \"learning_rate_warmup_steps\": 16000,\n",
     "\n",
     "    \"optimizer_adam_beta1\": 0.9,\n",
     "    \"optimizer_adam_beta2\": 0.997,\n",
@@ -74,43 +80,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "class Model(object):\n",
-    "    def __init__(self, params):\n",
-    "        self.params = params\n",
-    "        self.input_features = tf.placeholder(dtype=tf.int32, shape=(None, 13))\n",
-    "        self.input_values = tf.placeholder(dtype=tf.float32, shape=(None))\n",
-    "        self.transformer = Transformer(False, self.params)\n",
-    "        self.predictions = self.transformer(self.input_features)\n",
-    "        \n",
-    "        self.loss = tf.losses.mean_squared_error(self.input_values, self.predictions)\n",
-    "        optimizer = tf.contrib.opt.LazyAdamOptimizer(\n",
-    "            self.params[\"learning_rate\"],\n",
-    "            beta1=self.params[\"optimizer_adam_beta1\"],\n",
-    "            beta2=self.params[\"optimizer_adam_beta2\"],\n",
-    "            epsilon=self.params[\"optimizer_adam_epsilon\"])\n",
-    "\n",
-    "        global_step = tf.train.get_global_step()\n",
-    "        tvars = tf.trainable_variables()\n",
-    "        gradients = optimizer.compute_gradients(self.loss, tvars, colocate_gradients_with_ops=True)\n",
-    "        minimize_op = optimizer.apply_gradients(gradients, global_step=global_step, name=\"train\")\n",
-    "        update_ops = tf.get_collection(tf.GraphKeys.UPDATE_OPS)\n",
-    "        \n",
-    "        self.train_op = tf.group(minimize_op, update_ops)\n",
+    "class RLStrategy(object):\n",
+    "    def __init__(self, sess, model, epsilon, is_debug=False):\n",
+    "        self.epsilon = epsilon\n",
+    "        self.model = model\n",
+    "        self.sess = sess\n",
+    "        self.is_debug = is_debug\n",
     "    \n",
-    "    def init(self, sess):\n",
-    "        init = tf.global_variables_initializer()\n",
-    "        sess.run(init)\n",
-    "    \n",
-    "    def train(self, sess, features, values):\n",
-    "        return sess.run([self.loss, self.train_op], feed_dict={self.input_features:features, self.input_values:values})[0]\n",
-    "    \n",
-    "    def inference(self, sess, features):\n",
-    "        return sess.run(self.predictions, feed_dict={self.input_features:features})"
+    "    def discard(self, tiles):\n",
+    "        hands = utils.tiles34_to_list(tiles)\n",
+    "        if np.random.uniform() <= self.epsilon:\n",
+    "            return random.choice(hands)\n",
+    "        else:\n",
+    "            predicts = model.inference(sess, hands)\n",
+    "            if self.is_debug:\n",
+    "                for t, v in zip(hands, predicts):\n",
+    "                    print \"%s:%.3f\" % (utils.TO_GRAPH_LIST[t], v)\n",
+    "            idx = np.argmax(predicts)\n",
+    "            return hands[idx]"
    ]
   },
   {
@@ -119,137 +109,179 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model and training ops\n",
+    "hands = utils.load_hand([\"/Users/xinran.he/GitProjects/mahjong/data/single_hand_efficiency/20180102.txt\"])\n",
+    "print len(hands)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "MAX_ROUND = 60\n",
+    "MEMORY_SIZE = 1000000\n",
+    "NEGATIVE_SAMPLE_RATE = 0.2\n",
+    "NUM_STEP_EPOCH = 10000\n",
+    "\n",
+    "INIT_EPSILON = 0.5\n",
+    "EPSILON_DECAY_PER_EPOCH = 0.9\n",
+    "\n",
+    "NEGATIVE_SAMPLE_RATE = 0.2\n",
+    "MIN_NUM_INSTANCES = 1000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model initialization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory = []\n",
+    "memory_pos = 0\n",
+    "epsilon = INIT_EPSILON\n",
+    "\n",
     "g=tf.Graph()\n",
     "with g.as_default():\n",
-    "    model = Model(PARAMS)\n",
     "    sess = tf.Session()\n",
+    "        \n",
+    "    # initialize model\n",
+    "    model = Model(PARAMS)\n",
     "    model.init(sess)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class RLStrategy(object):\n",
-    "    def __init__(self, sess, model, epsilon):\n",
-    "        self.epsilon = epsilon\n",
-    "        self.model = model\n",
-    "        self.sess = sess\n",
-    "    \n",
-    "    def discard(self, tiles, left_tiles):\n",
-    "        hands = []\n",
-    "        possible_tiles = []\n",
-    "        for i in xrange(34):\n",
-    "            if tiles[i] > 0:\n",
-    "                tiles[i] -= 1\n",
-    "                hands.append(utils.tiles34_to_list(tiles))\n",
-    "                possible_tiles.append(i)\n",
-    "                tiles[i] += 1\n",
-    "        if np.random.uniform() <= self.epsilon:\n",
-    "            return random.choice(possible_tiles)\n",
-    "        else:\n",
-    "            predicts = model.inference(sess, hands)\n",
-    "            for t, v in zip(possible_tiles, predicts):\n",
-    "                print \"%s:%.3f\" % (utils.TO_GRAPH_LIST[t], v)\n",
-    "            idx = np.argmax(predicts[:, 0])\n",
-    "            return possible_tiles[idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "hands = utils.load_hand([\"/Users/xinran.he/GitProjects/mahjong/data/single_hand_efficiency/20180101.txt\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def sample_init_hands(all_hands, probs):\n",
-    "    random.shuffle(all_hands)\n",
-    "    hands = []\n",
-    "    for hand in all_hands:\n",
-    "        if np.random.uniform() <= probs[hand[0]]:\n",
-    "            hands.append(hand[1])\n",
-    "    return hands"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Init strategy from GreedyShanten\n",
+    "NUM_EPOCHS = 50\n",
     "with g.as_default():\n",
-    "    sampled_hands = sample_init_hands(hands, [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0])\n",
-    "    NUM_INIT = 10000\n",
-    "    p = 0\n",
-    "    for i in xrange(NUM_INIT):\n",
-    "        data = []\n",
-    "        for j in xrange(2):\n",
-    "            p = (p + 1) % len(sampled_hands)\n",
-    "            data.extend(game_play.simulate(sampled_hands[p], base_strategy.GreedyShanten()))\n",
-    "        if len(data) == 0:\n",
-    "            continue\n",
-    "        features = np.array([d[0] for d in data])\n",
-    "        values = np.array([d[1] for d in data])\n",
-    "        if i % 100 == 0:\n",
-    "            print \"Step: %d avg loss: %.3f\" % (i, model.train(sess, features, values) / len(values))"
+    "    for epoch in xrange(NUM_EPOCHS):\n",
+    "        print \"EPOCH: %d\" % epoch\n",
+    "        # update target network\n",
+    "        model.update_target_network(sess)\n",
+    "        strategy = RLStrategy(sess, model, epsilon)\n",
+    "\n",
+    "        for step in xrange(NUM_STEP_EPOCH):\n",
+    "            # random sample hand\n",
+    "            init_hand = random.choice(hands)[1]\n",
+    "            current_hand = [0] * utils.NUM_HAIS\n",
+    "            left_tiles = [4] * utils.NUM_HAIS\n",
+    "            for hai in init_hand:\n",
+    "                left_tiles[hai] -= 1\n",
+    "                current_hand[hai] += 1\n",
+    "            yama = utils.tiles34_to_list(left_tiles)\n",
+    "            random.shuffle(yama)\n",
+    "\n",
+    "            for i in xrange(MAX_ROUND):\n",
+    "                state = utils.tiles34_to_list(current_hand)\n",
+    "                shanten = int(SHANTEN.calculate_shanten(current_hand))\n",
+    "\n",
+    "                # call epsilon-greedy startegy to find action\n",
+    "                discard = strategy.discard(current_hand)\n",
+    "                discard_index = state.index(discard)\n",
+    "\n",
+    "                # draw a new tile\n",
+    "                current_hand[discard] -= 1\n",
+    "                new_tile = yama[i]\n",
+    "                current_hand[new_tile] += 1\n",
+    "\n",
+    "                state_plus = utils.tiles34_to_list(current_hand)\n",
+    "                shanten_plus = int(SHANTEN.calculate_shanten(current_hand))\n",
+    "\n",
+    "                if utils.is_agari(current_hand):\n",
+    "                    is_terminal = 1\n",
+    "                    reward = utils.get_total_score(current_hand, new_tile) / 100.0\n",
+    "                else:\n",
+    "                    is_terminal = 0\n",
+    "                    reward = shanten - shanten_plus\n",
+    "\n",
+    "                if reward > 0 or np.random.uniform() <= NEGATIVE_SAMPLE_RATE:\n",
+    "                    if len(memory) < MEMORY_SIZE:\n",
+    "                        memory.append((state, state_plus, reward, discard_index, is_terminal, shanten, shanten_plus))\n",
+    "                    else:\n",
+    "                        memory[memory_pos] = (state, state_plus, reward, discard_index, is_terminal, shanten, shanten_plus)\n",
+    "                        memory_pos = (memory_pos + 1) % MEMORY_SIZE\n",
+    "\n",
+    "                # agari is end of episode\n",
+    "                if is_terminal > 0:\n",
+    "                    break\n",
+    "\n",
+    "            if len(memory) >= MIN_NUM_INSTANCES:\n",
+    "                # sample one batch from replay memory\n",
+    "                batch = random.sample(memory, PARAMS[\"batch_size\"])\n",
+    "                state_batch = np.array([b[0] for b in batch], dtype=np.int32)\n",
+    "                state_plus_batch = np.array([b[1] for b in batch], dtype=np.int32)\n",
+    "                reward_batch = np.array([b[2] for b in batch], dtype=np.float32)\n",
+    "                action_batch = np.array([b[3] for b in batch], dtype=np.int32)\n",
+    "                terminal_batch = np.array([b[4] for b in batch], dtype=np.int32)\n",
+    "                loss = model.train(sess, (state_batch, state_plus_batch, reward_batch, action_batch, terminal_batch))\n",
+    "                if step % 100 == 0:\n",
+    "                    print \"step %d loss %.3f\" % (step, loss)\n",
+    "            else:\n",
+    "                if step % 100 == 0:\n",
+    "                    print \"step %d memory size: %d\" % (step, len(memory))\n",
+    "\n",
+    "        # update epsilon\n",
+    "        epsilon = epsilon * EPSILON_DECAY_PER_EPOCH"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def evaluate_strategy(sess, model, hands):\n",
+    "    Qvalues = np.zeros(len(hands))\n",
+    "    rewards = np.zeros(len(hands))\n",
+    "    strategy = RLStrategy(sess, model, 0.01)\n",
+    "    print \"Eval:\"\n",
+    "    for i, hand in enumerate(hands):\n",
+    "        if i % 50 == 0:\n",
+    "            print i,\n",
+    "        Qvalues[i] = np.max(model.inference(sess, hand))\n",
+    "        \n",
+    "        current_hand = [0] * utils.NUM_HAIS\n",
+    "        left_tiles = [4] * utils.NUM_HAIS\n",
+    "        for hai in hand:\n",
+    "            left_tiles[hai] -= 1\n",
+    "            current_hand[hai] += 1\n",
+    "        yama = utils.tiles34_to_list(left_tiles)\n",
+    "        random.shuffle(yama)\n",
+    "        discount = 1.0\n",
+    "        for r in xrange(MAX_ROUND):\n",
+    "            state = utils.tiles34_to_list(current_hand)\n",
+    "            discard = strategy.discard(current_hand)\n",
+    "            # discard and draw a new tile\n",
+    "            current_hand[discard] -= 1\n",
+    "            new_tile = yama[r]\n",
+    "            current_hand[new_tile] += 1\n",
+    "            \n",
+    "            if utils.is_agari(current_hand):\n",
+    "                rewards[i] = discount * utils.get_total_score(current_hand, new_tile) / 100.0\n",
+    "    print \"...Done\"\n",
+    "    return np.mean(Qvalues), np.mean(rewards)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "print sampled_hands[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "print sampled_hands[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "print sampled_hands[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "print hands[0]"
+    "# Debug"
    ]
   },
   {
@@ -258,18 +290,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = game_play.simulate(sampled_hands[0], RLStrategy(sess, model, 0.0), True)"
+    "def show_prediction(sess, hand):\n",
+    "    predictions = model.inference(sess, hand)\n",
+    "    for hid, prediction in zip(hand, predictions):\n",
+    "        print utils.TO_GRAPH_LIST[hid] + \":\" + str(prediction)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print data"
+    "show_prediction(sess, hands[158][1])"
    ]
   },
   {
